--- a/src/docs/css/Markdown.sass
+++ b/src/docs/css/Markdown.sass
@@ -72,18 +72,6 @@
     animation: dash 1.5s ease-in-out infinite !important
     stroke: white !important
 
-.mobile-header
-    @media screen and (min-width: $breakSmall)
-        display: none
-
-    height: $headerHeight
-    background-color: $fredboatColor
-
-    .logo
-        // Not using flexbox here, because the scrollbar can push the center
-        position: relative
-        left: calc(50vw - 24px)
-
 .text-404
     color: white
     font-size: 48px
